chore: fixed jumping behavior

--- a/projects/ccf-rui/src/app/modules/info/info-dialog/info-dialog.component.scss
+++ b/projects/ccf-rui/src/app/modules/info/info-dialog/info-dialog.component.scss
@@ -38,5 +38,9 @@
     .panel {
       margin-bottom: 1.5rem;
     }
+
+    .dialog-content {
+      height: 50rem !important; min-height: 20px !important;
+    }
   }
 }
